[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8.0.0"]
build-backend="setuptools.build_meta"

[project]
name = "navmazing"
description = "A simple navigation framework"
authors = [{name="Peter Savage",email="psavage@redhat.com"}]
maintainers = [{name="Ronny Pfannschmidt", email="rpfannsc@redhat.com"}]

readme = {file="README.md", content-type="text/markdown"}
urls.Project = "https://github.com/RedhatQE/navmazing/"
classifiers = [

    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",

]
keywords = ["selenium", "navigation"]
requires-python = ">= 3.8"

dynamic = ["version"]
[tool.setuptools]
packages = ["navmazing"]
package-data = {navmazing= ["py.typed"]}

[tool.setuptools_scm]

[tool.mypy]
strict=true
python_version = "3.8"
