[metadata]
name = navmazing
author = Peter Savage
author-email = psavage@redhat.com
summary = A simple navigation framework
description-file = README.rst
url = https://github.com/RedhatQE/navmazing/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Utilities
keywords =
    setup
    distutils
install_requires =
    attrs

[files]
packages =
    navmazing

[wheel]
universal=1

