[metadata]
name = navmazing
author = Peter Savage
author-email = psavage@redhat.com
summary = A simple navigation framework
description-file = README.rst
long_description_content_type = text/x-rst
url = https://github.com/RedhatQE/navmazing/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keywords =
    setup
    distutils

[files]
packages =
    navmazing

[wheel]
universal=1

