[metadata]
name = navmazing
author = Peter Savage
author-email = psavage@redhat.com
summary = A simple navigation framework
description-file = README.rst
url = https://github.com/RedhatQE/navmazing/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
keywords =
    selenium
    navigation
[options]
packages = navmazing
requires_python = >= 3.8